--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Courier New', 'Courier', 
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to right, rgb(79, 187, 231), rgb(232, 48, 148)) repeat scroll 0% 0%;
+}
+
+button {
+	cursor: pointer;
 }
 
 code {
